# L-chunk

./: .gitignore  LINE_BASED_IMPLEMENTATION_SUMMARY.md  README.md  REORGANIZATION_REPORT.md  demo_line_based_approach.py  pyproject.toml  run_adaptive_detector.py  run_intelligent_detector.py  run_line_based_detector.py  setup.py  test_all_samples.py  test_line_based_adaptive.py  test_line_based_chunking.py  test_md_converter.py  test_reorganization.py  test_special_markers.py
data/samples/: TPDM,111,易,564,20250113,1.json
data/training/: dataset_stats_20251010_154640.json  positive_samples_20251010_154640.csv  project-1-at-2025-10-10-15-05-fea45fba.csv
docs/: api.md
model_comparison_results/: best_traditional_model_random_forest.pkl  comparison_summary_20251013_155617.md  comparison_summary_20251013_155812.md  model_comparison_20251013_155617.csv  model_comparison_20251013_155617.json  model_comparison_20251013_155812.csv
output/: adaptive_detection_report_20251014_120425.md  intelligent_detection_report_20251013_184532.md
output/markdown/: TPDM,109,易,187,20250116,1.md  TPDM,111,侵訴,89,20250115,1.md  TPDM,111,易,564,20250113,1.md  TPDM,111,金重訴,34,20250114,1.md
output/model_comparison/: best_traditional_model_random_forest.pkl  comparison_summary_20251013_194430.md  model_comparison_20251013_194430.csv  model_comparison_20251013_194430.json
results/analysis/: symbol_D2_20251012_232807.txt  symbol_MFD2_20251012_232807.txt  symbol_MFRD2_20251012_232807.txt  symbol_MRD2_20251012_232807.txt  (+2 more)
scripts/: check_location_stats.py  detection_demo.py
(+2237 files in other folders)
