[project]
name = "l-chunk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "label-studio>=1.21.0",
    "matplotlib>=3.10.7",
    "numpy>=1.26.4,<2.0.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.5.0",
    "seaborn>=0.13.0",
    "torch>=2.8.0",
    "transformers>=4.57.0",
    "datasets>=2.0.0",
]
